# coverage-stats

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TODO.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: deferred-work.md  tech-spec-assert-counter.md  tech-spec-covers-resolver.md  tech-spec-data-foundation.md  tech-spec-html-reporter.md  tech-spec-json-csv-reporters.md  tech-spec-profiler.md  tech-spec-project-scaffold.md  tech-spec-xdist-worker-controller-split.md
_bmad-output/planning-artifacts/: architecture.md  prd.md  product-brief-coverage-stats-2026-03-15.md
coverage-stats-example/: .gitignore  README.md  pyproject.toml
coverage-stats-example/src/: asdf.py  asdf2.py
coverage-stats-example/src/inventory/products/: catalog.py  images.py  pricing.py  search.py  variants.py
coverage-stats-example/src/inventory/warehouse/: locations.py  orders.py  stock.py  suppliers.py  transfers.py
coverage-stats-example/src/notifications/email/: bounce.py  queue_mgr.py  sender.py  templates.py  tracking.py
coverage-stats-example/src/notifications/push/: batch.py  channels.py  devices.py  messages.py  subscriptions.py
coverage-stats-example/src/payments/billing/: billing.py  discounts.py  invoices.py  refunds.py  tax.py
coverage-stats-example/src/payments/gateway/: bank.py  crypto.py  paypal.py  stripe.py  wallet.py
coverage-stats-example/src/reporting/analytics/: alerts.py  charts.py  dashboards.py  exports.py  metrics.py
coverage-stats-example/src/reporting/audit/: access.py  changes.py  compliance.py  events.py  logs.py
coverage-stats-example/src/users/auth/: login.py  oauth.py  passwords.py  sessions.py  tokens.py
coverage-stats-example/src/users/profiles/: avatar.py  notifications.py  preferences.py  privacy.py  settings.py
coverage-stats-example/tests/: test_asdf.py  test_asdf2.py
coverage-stats-example/tests/inventory/products/: test_catalog.py  test_images.py  test_pricing.py  test_search.py  test_variants.py
coverage-stats-example/tests/inventory/warehouse/: test_locations.py  test_orders.py  test_stock.py  test_suppliers.py  test_transfers.py
coverage-stats-example/tests/notifications/email/: test_bounce.py  test_queue_mgr.py  test_sender.py  test_templates.py  test_tracking.py
coverage-stats-example/tests/notifications/push/: test_batch.py  test_channels.py  test_devices.py  test_messages.py  test_subscriptions.py
coverage-stats-example/tests/payments/billing/: test_billing.py  test_discounts.py  test_invoices.py  test_refunds.py  test_tax.py
coverage-stats-example/tests/payments/gateway/: test_bank.py  test_crypto.py  test_paypal.py  test_stripe.py  test_wallet.py
coverage-stats-example/tests/reporting/analytics/: test_alerts.py  test_charts.py  test_dashboards.py  test_exports.py  test_metrics.py
coverage-stats-example/tests/reporting/audit/: test_access.py  test_changes.py  test_compliance.py  test_events.py  test_logs.py
coverage-stats-example/tests/users/auth/: test_login.py  test_oauth.py  test_passwords.py  test_sessions.py  test_tokens.py
coverage-stats-example/tests/users/profiles/: test_avatar.py  test_notifications.py  test_preferences.py  test_privacy.py  test_settings.py
docs/: testing-guide.md
lessons/: LESSONS.md
lessons/lesson-files/: sys-setrace-fires-return-for-generator-yields-not-just-real-returns.md
scripts/: compare_cov_cs.py  compare_coverage.py  compare_standalone_vs_with_cs.py  diagnose_arcs.py  diagnose_missing_arcs.py  dump_cs_arcs.py  exact_missing_arcs.py
src/coverage_stats/: __init__.py  analyzer.py  assert_counter.py  cli.py  covers.py  decorator.py  executable_lines.py  plugin.py  profiler.py  pytest_plugin.py  reporter.py  reporting_coordinator.py  store.py  tracing_coordinator.py
tasks/: 0-TEMPLATE-current-task.md  0-vlad-analysis.md  2026-03-20-09-50-52-DONE-match-partial-coverage-plan.md  2026-03-20-09-50-52-DONE-match-partial-coverage.md  2026-03-20-IN-PROGRESS-also-report-total-coverage-plan.md  2026-03-20-IN-PROGRESS-also-report-total-coverage.md  2026-03-20-arc-deliberate-incidental-plan.md  2026-03-26-refactor-html-reporter.md  2026-04-05-make-coverage-py-interop-plan.md  2026-04-05-make-coverage-py-interop.md  2026-04-07-make-coverage-py-interop-plan-2.md  2026-04-08-report-architectural-improvements.md  2026-04-08-split-plugin-py-into-accidental-vs-essential-classes.md  2026-04-11-httpx-difference-findings-2.md  2026-04-11-httpx-differences.md  2026-04-12-httpx-difference-findings-2.md  2026-04-12-refactor-coverage-stats-to-measure-arcs-like-coverage-py.md  2026-04-13-cat-1-multi-line-normalization.md  2026-04-13-py3.9-fix.md  2026-04-17-fix-httpx-main-py-diff-on-line-268.md  track_test_ids_per_line.md
tasks/2026-04-08-report-architectural-improvements/: priorities.md  task_1.1_split_plugin.md  task_1.2_break_up_report_data.md  task_1.3_remove_assert_counter.md  task_1.4_single_pass_folder_node_aggregation.md  task_2.1_reduce_hot_path_attribute_lookups.md  task_2.2_slots_on_line_data.md  task_2.3_defaultdict_for_session_store.md  task_2.4_cache_parsed_asts.md  task_2.5_precompute_in_scope_prefixes.md  task_3.1_pluggable_branch_analyzer.md  task_3.2_deduplicate_branch_walking.md  task_3.3_event_based_lifecycle.md  task_4.1_coverage_py_version_guarding.md  task_4.2_tracer_displacement_detection.md  task_4.3_tool_id_fallback_warnings.md  task_4.4_thread_safety_docs.md  task_5.1_public_iteration_api_on_session_store.md  task_5.2_move_covers_lines_to_profiler_context.md  task_6.1_unit_tests_for_plugin.md  task_6.2_performance_benchmarks.md
tests/: conftest.py  sample_module.py  test_sample.py
tests/benchmarks/: test_reporting_perf.py  test_store_perf.py  test_tracer_perf.py
tests/integration/: test_coverage_py_interop.py  test_plugin_basic.py  test_plugin_xdist.py
tests/unit/: test_assert_counter.py  test_coordinators.py  test_covers.py  test_profiler.py  (+4 more)
(+27 files in other folders)
