[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coverage-stats"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pytest"]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.entry-points."pytest11"]
coverage-stats = "coverage_stats.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
files = ["src"]
exclude = ["^\\.venv/"]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["xdist.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -p pytester"
testpaths = ["tests"]
