[project]
name = "coverage-stats"
version = "0.1.1"
requires-python = ">=3.9"
description = "Per-line deliberate/incidental coverage, # tests, # asserts & other stats stats for pytest"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["pytest", "coverage", "testing"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = ["ruff", "mypy", "nox", "coverage[toml]", "pytest-cov", "pytest-xdist", "import-linter"]
benchmark = ["pytest-benchmark"]

[project.entry-points."pytest11"]
coverage-stats = "coverage_stats.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"coverage_stats.reporters.html_report_helpers" = ["*.css", "*.js"]

[tool.mypy]
files = ["src"]
exclude = ["^\\.venv/"]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["xdist.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -p pytester"
testpaths = ["tests"]

# ── import-linter ──────────────────────────────────────────────
[tool.importlinter]
root_packages = ["coverage_stats"]

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "coverage_stats.plugin",
    "coverage_stats.reporters",
    "coverage_stats.profiler | coverage_stats.covers",
    "coverage_stats.store | coverage_stats.executable_lines",
]

[[tool.importlinter.contracts]]
name = "Reporters do not import from plugin"
type = "forbidden"
source_modules = ["coverage_stats.reporters"]
forbidden_modules = ["coverage_stats.plugin"]


[[tool.importlinter.contracts]]
name = "Nobody imports from plugin"
type = "forbidden"
source_modules = [
    "coverage_stats.reporters",
    "coverage_stats.covers",
    "coverage_stats.executable_lines",
    "coverage_stats.profiler",
    "coverage_stats.store",
]
forbidden_modules = ["coverage_stats.plugin"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "twine>=6.2.0",
]
